--- a/Login/Views/Home/Login.cshtml
+++ b/Login/Views/Home/Login.cshtml
@@ -7,19 +7,26 @@
 <link href="@customCssUrl" rel="stylesheet" type="text/css"/>
 
 <body>
-    <center>
-        <h2>Login</h2>
-    </center>
-    
-    <center>
-        <div >
-            <form class="form-control">
-                <input type="text" class="text-left" name="U_name" placeholder="Username" /><br />
-                <input type="password" class="text-left" name="pass" placeholder="Password" /><br />
-                <button class="btn-default">Login</button>
+    <div class="container">
+        <div class="header">
+            <h1>Login</h1>
+        </div>
+
+        <div class="login-form">
+            <form>
+                <div class="U_name">
+                    <input type="text" class="text-left" name="U_name" placeholder="Username" /><br />
+                </div>
+                <div class="password">
+                    <input type="password" class="text-left" name="pass" placeholder="Password" /><br />
+                </div>
+                <div class="submit">
+                    <input type="submit" class="btn btn-default" name="login" value="Login" />
+                </div>
+                
             </form>
         </div>
-    </center>
+    </div>
 </body>
 
 
