--- a/Login/Views/Home/Login.cshtml
+++ b/Login/Views/Home/Login.cshtml
@@ -13,7 +13,7 @@
         </div>
 
         <div class="login-form">
-            <form>
+            <form method="post">
                 <div class="U_name">
                     <input type="text" class="text-left" name="U_name" placeholder="Username" /><br />
                 </div>
