--- a/Login/Views/Home/Login.cshtml
+++ b/Login/Views/Home/Login.cshtml
@@ -15,10 +15,10 @@
         <div class="login-form">
             <form method="post">
                 <div class="U_name">
-                    <input type="text" class="text-left" name="U_name" placeholder="Username" /><br />
+                    <input type="text" class="text-left" name=U_name placeholder="Username" /><br />
                 </div>
                 <div class="password">
-                    <input type="password" class="text-left" name="pass" placeholder="Password" /><br />
+                    <input type="password" class="text-left" name=pass placeholder="Password" /><br />
                 </div>
                 <div class="submit">
                     <input type="submit" class="btn btn-default" name="login" value="Login" />
