--- a/GNIS/Meeting_Module/Views/Home/Index.cshtml
+++ b/GNIS/Meeting_Module/Views/Home/Index.cshtml
@@ -3,17 +3,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meeting Minutes</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="~/Scripts/table.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="~/Scripts/meetingMinutes.js"></script>
 </head>
 <body>
     <div class="container mt-5">
@@ -75,11 +73,10 @@
                     </tr>
                 </thead>
                 <tbody id="productServiceTable">
-                    <tr><td colspan="6">No matching records found</td></tr>
+                    <tr id="noRecordsRow"><td colspan="6">No matching records found</td></tr>
                 </tbody>
             </table>
             <button type="button" id="saveMeetingMinutes" class="btn btn-success">Save</button>
         </form>
     </div>
 </body>
-</html>
