some minor changes nothing big at all

--- a/Mini Accounting Management System/Pages/Shared/_LoginPartial.cshtml
+++ b/Mini Accounting Management System/Pages/Shared/_LoginPartial.cshtml
@@ -4,7 +4,7 @@
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
 
-
+<ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
     
@@ -26,4 +26,4 @@ else
         <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
 }
-
+</ul>
